Android: Fix invalid filename being proposed to file manager

The bug was only cosmetic i.e it only proposed an invalid filename, but
the mimetype being selected was still correct.

BUG:457557
(cherry picked from commit 5143c197592863246033e303282122c5dc352d07)